# ezqna

./: app.py  nixpacks.toml  package-lock.json  pyproject.toml  tailwind.config.js
ezqna/: __init__.py  dto.py  models.py  plugins.py  utils.py
ezqna/components/: base.py  index.py
ezqna/css/: style.css
ezqna/routes/: auth.py  index.py  question.py
ezqna/static/: style.css
migrations/versions/: 6ce32130a951_init.py
